--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 body {
-	font-family: sans-serif;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-size: 17px;
 	color: #000;
 	background-color: #D9D9AA;
@@ -21,18 +21,6 @@ select {
 .eng, .swa {
 	display:none;	
 }
-h1 {
-	color: #026334;
-	background-color: #FFFDFA;
-	text-align: center;
-	padding-top: 5px;
-	font-size: 14px;
-	font-weight: bold;
-	line-height: 100%;
-	padding-bottom: 5px;
-	font-family: sans-serif;
-	margin-bottom: 10px;
-}
 .textfield {
 	border: 1px solid #999;
 	width: 100%;
@@ -42,10 +30,7 @@ h1 {
 	text-indent: 5px;
 }
 #logo {
-	background-image: url(img/clouds.gif);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	width: 100%;
+	width: 80%;
 }
 #fans {
 	background-image:
@@ -59,16 +44,6 @@ h1 {
 	background-size: cover;
 	bottom: 0px;
 	z-index: -1;
-}
-#loadingindicator {
-	background-color: #5E9A4C;
-	position: absolute;
-	z-index: 100;
-	height: 100%;
-	width: 100%;
-	left: 0px;
-	top: 0px;
-	text-align: center;
 }
 #contribution {
 	background-color: #000;
@@ -123,16 +98,27 @@ h1 {
 	pointer-events: none;
 	opacity: 0;
 }
+#loadingindicator {
+	background-color: #E2E2E2;
+	position: absolute;
+	z-index: 100;
+	height: 100%;
+	width: 100%;
+	left: 0px;
+	top: 0px;
+	text-align: center;
+	display: none;
+}
 #loadingindicator img {
 	margin-top: 100px;
+	width: 160px;
 }
 button {
-	color: #000;
-	background-color: #FFF;
+	color: #FFFFFF;
+	background-color: #7FB037;
 	text-align: center;
 	width: 200px !important;
 	display: block;
-	border: 3px solid #0A7A26;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	-webkit-tap-highlight-color: transparent;
 	transition: all 0.5s;
@@ -141,12 +127,57 @@ button {
 	margin-right: auto;
 	margin-left: auto;
 	border-radius: 6px;
-	font-size: 16px;
+	font-size: 15px;
 	padding-top: 8px;
 	padding-right: 0px;
 	padding-bottom: 8px;
 	padding-left: 0px;
+	font-weight: normal;
+	border-top-width: 0px;
+	border-right-width: 0px;
+	border-bottom-width: 0px;
+	border-left-width: 0px;
+	border-top-style: none;
+	border-right-style: none;
+	border-bottom-style: none;
+	border-left-style: none;
+	text-shadow: 2px 2px 15px #000;
 }
+.nicewindow {
+	background-color: rgba(255,255,255,0.6);
+	padding: 5px;
+	width: 90%;
+	margin-top: 15px;
+	margin-right: auto;
+	margin-left: auto;
+	box-shadow: 3px 6px 53px -4px rgba(0,0,0,0.63);
+}
+.nicewindow .windowbutton {
+	box-shadow: 2px 2px 6px -1px rgba(0,0,0,0.63);
+	background-color: rgba(255,255,255,0.6);
+	width: 90%;
+	margin-right: auto;
+	margin-left: auto;
+	font-weight: normal;
+	font-size: 14px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	transition: all 0.6s;
+}
+.nicewindow .windowbutton:hover {
+	box-shadow: 2px 2px 16px -1px rgba(0,0,0,0.63);
+	background-color: rgba(255,255,255,1);
+	transition: all 0.6s;
+}
+.nicewindow h1 {
+	font-weight: normal;
+	font-size: 18px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
 button:active {
   transition: all 0.5s;
 }
