--- a/main.css
+++ b/main.css
@@ -31,6 +31,7 @@ select {
 }
 #logo {
 	width: 80%;
+	max-width: 300px;
 }
 #fans {
 	background-image:
@@ -72,6 +73,11 @@ select {
 	padding-left: 10px;
 	text-align: left;
 }
+#startmenu {
+	position: absolute;
+	z-index: 1;
+	bottom: 5%;
+}
 .layerbox {
 	background-color: rgba(255,255,255,0.8);
 	border: 3px solid #0A7A26;
@@ -93,6 +99,10 @@ select {
 
 ::-webkit-input-placeholder {  color: #000;}
 :-moz-placeholder { color: #000; }
+#mainmenu {
+	margin-top: 5%;
+}
+
 
 .blur {
 	pointer-events: none;
@@ -145,13 +155,13 @@ button {
 }
 .nicewindow {
 	background-color: rgba(255,255,255,0.6);
-	padding: 5px;
-	width: 90%;
-	margin-top: 15px;
-	margin-right: auto;
-	margin-left: auto;
+	width: 80%;
+	margin-right: 5%;
+	margin-left: 5%;
 	box-shadow: 3px 6px 53px -4px rgba(0,0,0,0.63);
+	padding: 5%;
 }
+
 .nicewindow .windowbutton {
 	box-shadow: 2px 2px 6px -1px rgba(0,0,0,0.63);
 	background-color: rgba(255,255,255,0.6);
@@ -165,6 +175,7 @@ button {
 	padding-top: 7px;
 	padding-bottom: 7px;
 	transition: all 0.6s;
+	cursor: pointer;
 }
 .nicewindow .windowbutton:hover {
 	box-shadow: 2px 2px 16px -1px rgba(0,0,0,0.63);
