--- a/main.css
+++ b/main.css
@@ -14,6 +14,25 @@ body {
 	background-size: 100% auto;
 	background-color: #387417;
 }
+.submenu {
+	display: none;
+	background-color: rgba(255,255,255,0.8);
+	
+	padding-right: 0%;
+	padding-left:  0%;
+		
+	padding-top: 0px;
+	padding-bottom: 20px;
+
+	margin-right: 5%;
+	margin-left: 5%;
+	
+	top: 50px;
+	
+	width: 90%;
+	position: absolute;
+	z-index: 100;
+}
 select {
 	padding-top: 6px;
 	padding-bottom: 6px;
@@ -64,7 +83,6 @@ select {
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
-
 #contribution {
 	background-color: #000;
 	position: absolute;
@@ -187,7 +205,7 @@ button {
     -webkit-user-select: none;
     user-select: none;
 }
-.nicewindow .windowbutton {
+.windowbutton {
 	box-shadow: 2px 2px 6px -1px rgba(0,0,0,0.63);
 	background-color: rgba(255,255,255,0.6);
 	width: 90%;
@@ -201,19 +219,33 @@ button {
 	padding-bottom: 7px;
 	transition: all 0.6s;
 	cursor: pointer;
-	text-transform: uppercase;
 }
-.nicewindow .windowbutton:hover {
+.heading_and_back {
+	background-color: #6C9055;
+	color: #FFF;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin-bottom: 35px;
+}
+.backarrow  {
+	width: 40px;
+	height: 23px;
+	background-image: url(arrow_back.svg);
+	background-size: auto 100%;
+	position: absolute;
+	background-position: center center;
+	background-repeat: no-repeat;
+}
+.windowbutton:hover {
 	box-shadow: 2px 2px 16px -1px rgba(0,0,0,0.63);
 	background-color: rgba(255,255,255,1);
 	transition: all 0.6s;
 }
 .nicewindow h1 {
 	font-weight: bold;
-	font-size: 14px;
+	font-size: 18px;
 	margin-top: 20px;
 	margin-bottom: 10px;
-	text-transform: uppercase;
 	color: #3F7345;
 }
 
